--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stripe/stripe-js": "^2.2.0",
     "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.0.0",
+    "csv-parser": "^3.2.0",
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
